--- a/iPhone Sample/Tests-Info.plist
+++ b/iPhone Sample/Tests-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string>iphone-tests-icon.png</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.allseeinginteractive.asihttprequest.tests</string>
+	<string>com.ef.etown.mobile.fiercerabbit.asihttprequest</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
